# st_vm

./: .boot.asm.swp  .gitignore  CMakeLists.txt  README.md  block.asm  boot.asm  cmake-gen  err  tmp
include/: block.h  closure.h  cls_mth.h  context.h  continuation.h  locals.h  message.h  obj.h  osrc.func.h  primitives.func.h  values.func.h  values.h
include/Linux/: platform.h
include/Windows/: platform.h
lib/cmake/: dl-config.cmake
osrc/: CMakeLists.txt  append_method.h  asm.c  asm_assign.c  asm_method.c  asm_parse_arg.c  build.param  dump_message.c  exec.c  exec.h  exec_assign.c  exec_block.c  exec_call.c  exec_cont.c  exec_cont.h  exec_global.c  exec_global.h  exec_goto.c  exec_goto.h  exec_message.c  exec_new.c  exec_new.h  exec_param.c  exec_param.h  exec_primitive.c  exec_return.c  exec_send.c  exec_send.h  init_symbols.h  intern_string.c  key_val.h  locals.c  main.c  method_dump.h  methods.c  o_read_lines.c  o_read_words.c  oint.c  run.c  tmp
primitives/: .prim_print.c.swp  CMakeLists.txt  build.param  main.c  prim_int_compare.c  prim_obj_identical.c  prim_print.c  prim_sym_compare.c
values/: CMakeLists.txt  build.param  closure_int.h  continuation_int.h  values_basic.c  values_block.c  values_closure.c  values_code.c  values_continuation.c  values_ivars.c  values_locals.c  values_obj.c  values_print.c  values_symbol.c
